feat(catalogue): add merchant product management (#11)
